--- a/assets/styles/body.scss
+++ b/assets/styles/body.scss
@@ -1,7 +1,8 @@
 html,
-body {
-    min-height: 100%;
-    min-width: 100%;
+body,
+#__nuxt {
+    min-height: 100vh;
+    min-width: 100vw;
     margin: 0;
     padding: 0;
 
@@ -11,4 +12,14 @@ body {
 * {
     box-sizing: border-box;
     color: $color-white;
+}
+
+// Убрать скроллбары
+html {
+    scrollbar-width: none; /* For Firefox */
+    -ms-overflow-style: none; /* For Internet Explorer and Edge */
+}
+
+html::-webkit-scrollbar {
+    width: 0px; /* For Chrome, Safari, and Opera */
 }
