--- a/assets/styles/fonts.scss
+++ b/assets/styles/fonts.scss
@@ -4,5 +4,5 @@
     font-family: "Manrope", sans-serif;
     font-optical-sizing: auto;
     font-weight: 500;
-    letter-spacing: .02rem;
+    letter-spacing: .02em;
 }
