--- a/assets/styles/body.scss
+++ b/assets/styles/body.scss
@@ -7,6 +7,7 @@ body,
     padding: 0;
 
     background-color: $color-bg;
+    //overflow: clip;
 }
 
 * {
@@ -27,5 +28,5 @@ html {
 }
 
 html::-webkit-scrollbar {
-    width: 0px; /* For Chrome, Safari, and Opera */
+    width: 0; /* For Chrome, Safari, and Opera */
 }
